ios/Runner/bridge_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_sync_config {
  struct wire_cst_list_prim_u_8_strict *sync_folder;
  struct wire_cst_list_prim_u_8_strict *database_path;
  uint32_t sync_interval_seconds;
  uint32_t max_upload_speed_kbps;
  uint32_t max_download_speed_kbps;
  bool delta_sync_enabled;
  uint64_t delta_sync_min_size;
  bool pause_on_metered;
  bool wifi_only;
  bool watch_filesystem;
  struct wire_cst_list_String *ignore_patterns;
  bool notifications_enabled;
  bool launch_at_startup;
  bool minimize_to_tray;
} wire_cst_sync_config;
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_config(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_conflicts(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_pending_items(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_remote_folders(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_server_info(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_folders(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_history(int64_t port_,
                                                                      uint32_t limit);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_status(int64_t port_);
WireSyncRust2DartDco frbgen_oxicloud_app_wire__crate__api__simple__greet(struct wire_cst_list_prim_u_8_strict *name);
void frbgen_oxicloud_app_wire__crate__api__simple__init_app(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__initialize(int64_t port_,
                                                                struct wire_cst_sync_config *config);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__is_logged_in(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__login(int64_t port_,
                                                           struct wire_cst_list_prim_u_8_strict *server_url,
                                                           struct wire_cst_list_prim_u_8_strict *username,
                                                           struct wire_cst_list_prim_u_8_strict *password);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__logout(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__resolve_conflict(int64_t port_,
                                                                      struct wire_cst_list_prim_u_8_strict *conflict_id,
                                                                      int32_t resolution);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__set_sync_folders(int64_t port_,
                                                                      struct wire_cst_list_String *folder_ids);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__shutdown(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__start_sync(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__stop_sync(int64_t port_);
void frbgen_oxicloud_app_wire__crate__api__oxicloud__sync_now(int64_t port_);