lib/src/rust/frb_generated.io.dart


/// generated by flutter_rust_bridge
class RustLibWire implements BaseWire {
  factory RustLibWire.fromExternalLibrary(ExternalLibrary lib) =>
      RustLibWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RustLibWire(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RustLibWire.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void store_dart_post_cobject(DartPostCObjectFnType ptr) {
    return _store_dart_post_cobject(ptr);
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
    'store_dart_post_cobject',
  );
  late final _store_dart_post_cobject =
      _store_dart_post_cobjectPtr.asFunction<void Function(DartPostCObjectFnType)>();

  void wire__crate__api__oxicloud__get_config(int port_) {
    return _wire__crate__api__oxicloud__get_config(port_);
  }

  late final _wire__crate__api__oxicloud__get_configPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_config',
  );
  late final _wire__crate__api__oxicloud__get_config =
      _wire__crate__api__oxicloud__get_configPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_conflicts(int port_) {
    return _wire__crate__api__oxicloud__get_conflicts(port_);
  }

  late final _wire__crate__api__oxicloud__get_conflictsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_conflicts',
  );
  late final _wire__crate__api__oxicloud__get_conflicts =
      _wire__crate__api__oxicloud__get_conflictsPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_pending_items(int port_) {
    return _wire__crate__api__oxicloud__get_pending_items(port_);
  }

  late final _wire__crate__api__oxicloud__get_pending_itemsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_pending_items',
  );
  late final _wire__crate__api__oxicloud__get_pending_items =
      _wire__crate__api__oxicloud__get_pending_itemsPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_remote_folders(int port_) {
    return _wire__crate__api__oxicloud__get_remote_folders(port_);
  }

  late final _wire__crate__api__oxicloud__get_remote_foldersPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_remote_folders',
  );
  late final _wire__crate__api__oxicloud__get_remote_folders =
      _wire__crate__api__oxicloud__get_remote_foldersPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_server_info(int port_) {
    return _wire__crate__api__oxicloud__get_server_info(port_);
  }

  late final _wire__crate__api__oxicloud__get_server_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_server_info',
  );
  late final _wire__crate__api__oxicloud__get_server_info =
      _wire__crate__api__oxicloud__get_server_infoPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_sync_folders(int port_) {
    return _wire__crate__api__oxicloud__get_sync_folders(port_);
  }

  late final _wire__crate__api__oxicloud__get_sync_foldersPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_folders',
  );
  late final _wire__crate__api__oxicloud__get_sync_folders =
      _wire__crate__api__oxicloud__get_sync_foldersPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__get_sync_history(int port_, int limit) {
    return _wire__crate__api__oxicloud__get_sync_history(port_, limit);
  }

  late final _wire__crate__api__oxicloud__get_sync_historyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Uint32)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_history',
  );
  late final _wire__crate__api__oxicloud__get_sync_history =
      _wire__crate__api__oxicloud__get_sync_historyPtr.asFunction<void Function(int, int)>();

  void wire__crate__api__oxicloud__get_sync_status(int port_) {
    return _wire__crate__api__oxicloud__get_sync_status(port_);
  }

  late final _wire__crate__api__oxicloud__get_sync_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__get_sync_status',
  );
  late final _wire__crate__api__oxicloud__get_sync_status =
      _wire__crate__api__oxicloud__get_sync_statusPtr.asFunction<void Function(int)>();

  WireSyncRust2DartDco wire__crate__api__simple__greet(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> name,
  ) {
    return _wire__crate__api__simple__greet(name);
  }

  late final _wire__crate__api__simple__greetPtr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_oxicloud_app_wire__crate__api__simple__greet');
  late final _wire__crate__api__simple__greet = _wire__crate__api__simple__greetPtr.asFunction<
      WireSyncRust2DartDco Function(
        ffi.Pointer<wire_cst_list_prim_u_8_strict>,
      )>();

  void wire__crate__api__simple__init_app(int port_) {
    return _wire__crate__api__simple__init_app(port_);
  }

  late final _wire__crate__api__simple__init_appPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__simple__init_app',
  );
  late final _wire__crate__api__simple__init_app =
      _wire__crate__api__simple__init_appPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__initialize(
    int port_,
    ffi.Pointer<wire_cst_sync_config> config,
  ) {
    return _wire__crate__api__oxicloud__initialize(port_, config);
  }

  late final _wire__crate__api__oxicloud__initializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_sync_config>)>>(
          'frbgen_oxicloud_app_wire__crate__api__oxicloud__initialize');
  late final _wire__crate__api__oxicloud__initialize = _wire__crate__api__oxicloud__initializePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_sync_config>)>();

  void wire__crate__api__oxicloud__is_logged_in(int port_) {
    return _wire__crate__api__oxicloud__is_logged_in(port_);
  }

  late final _wire__crate__api__oxicloud__is_logged_inPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__is_logged_in',
  );
  late final _wire__crate__api__oxicloud__is_logged_in =
      _wire__crate__api__oxicloud__is_logged_inPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__login(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> server_url,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> username,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> password,
  ) {
    return _wire__crate__api__oxicloud__login(
      port_,
      server_url,
      username,
      password,
    );
  }

  late final _wire__crate__api__oxicloud__loginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_oxicloud_app_wire__crate__api__oxicloud__login');
  late final _wire__crate__api__oxicloud__login = _wire__crate__api__oxicloud__loginPtr.asFunction<
      void Function(
        int,
        ffi.Pointer<wire_cst_list_prim_u_8_strict>,
        ffi.Pointer<wire_cst_list_prim_u_8_strict>,
        ffi.Pointer<wire_cst_list_prim_u_8_strict>,
      )>();

  void wire__crate__api__oxicloud__logout(int port_) {
    return _wire__crate__api__oxicloud__logout(port_);
  }

  late final _wire__crate__api__oxicloud__logoutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__logout',
  );
  late final _wire__crate__api__oxicloud__logout =
      _wire__crate__api__oxicloud__logoutPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__resolve_conflict(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> conflict_id,
    int resolution,
  ) {
    return _wire__crate__api__oxicloud__resolve_conflict(
      port_,
      conflict_id,
      resolution,
    );
  }

  late final _wire__crate__api__oxicloud__resolve_conflictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Int32,
          )>>('frbgen_oxicloud_app_wire__crate__api__oxicloud__resolve_conflict');
  late final _wire__crate__api__oxicloud__resolve_conflict =
      _wire__crate__api__oxicloud__resolve_conflictPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>, int)>();

  void wire__crate__api__oxicloud__set_sync_folders(
    int port_,
    ffi.Pointer<wire_cst_list_String> folder_ids,
  ) {
    return _wire__crate__api__oxicloud__set_sync_folders(port_, folder_ids);
  }

  late final _wire__crate__api__oxicloud__set_sync_foldersPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_String>)>>(
          'frbgen_oxicloud_app_wire__crate__api__oxicloud__set_sync_folders');
  late final _wire__crate__api__oxicloud__set_sync_folders =
      _wire__crate__api__oxicloud__set_sync_foldersPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_list_String>)>();

  void wire__crate__api__oxicloud__shutdown(int port_) {
    return _wire__crate__api__oxicloud__shutdown(port_);
  }

  late final _wire__crate__api__oxicloud__shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__shutdown',
  );
  late final _wire__crate__api__oxicloud__shutdown =
      _wire__crate__api__oxicloud__shutdownPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__start_sync(int port_) {
    return _wire__crate__api__oxicloud__start_sync(port_);
  }

  late final _wire__crate__api__oxicloud__start_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__start_sync',
  );
  late final _wire__crate__api__oxicloud__start_sync =
      _wire__crate__api__oxicloud__start_syncPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__stop_sync(int port_) {
    return _wire__crate__api__oxicloud__stop_sync(port_);
  }

  late final _wire__crate__api__oxicloud__stop_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__stop_sync',
  );
  late final _wire__crate__api__oxicloud__stop_sync =
      _wire__crate__api__oxicloud__stop_syncPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__sync_now(int port_) {
    return _wire__crate__api__oxicloud__sync_now(port_);
  }

  late final _wire__crate__api__oxicloud__sync_nowPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_wire__crate__api__oxicloud__sync_now',
  );
  late final _wire__crate__api__oxicloud__sync_now =
      _wire__crate__api__oxicloud__sync_nowPtr.asFunction<void Function(int)>();

  void wire__crate__api__oxicloud__update_config(
    int port_,
    ffi.Pointer<wire_cst_sync_config> config,
  ) {
    return _wire__crate__api__oxicloud__update_config(port_, config);
  }
